--- a/web/src/app/students/view/students.view.component.html
+++ b/web/src/app/students/view/students.view.component.html
@@ -38,6 +38,7 @@
         <button type="submit" class="btn btn-default">Add</button>
       </div>
     </div>
+    <course-list></course-list>
   </form>
 </div>
 
