--- a/web/src/app/students/course-list/course-list.component.html
+++ b/web/src/app/students/course-list/course-list.component.html
@@ -1,5 +1,5 @@
 <div class="tow">
   <button class="btn btn-primary" type="button">
-    Enroll Course <span class="badge">4</span>
+    Enroll Course <span class="badge">{{count}}</span>
   </button>
 </div>
