--- a/web/src/app/students/view/students.view.component.html
+++ b/web/src/app/students/view/students.view.component.html
@@ -38,7 +38,8 @@
         <button type="submit" class="btn btn-default">Add</button>
       </div>
     </div>
-    <course-list [count]="inputCount"></course-list>
+    <course-list [count]="student?.enrolledCourse.length"
+    [enrolledCourse]="student?.enrolledCourse"></course-list>
   </form>
 </div>
 
