--- a/web/src/app/students/course-list/course-list.component.html
+++ b/web/src/app/students/course-list/course-list.component.html
@@ -1,5 +1,23 @@
-<div class="tow">
+<div class="row">
   <button class="btn btn-primary" type="button">
     Enroll Course <span class="badge">{{count}}</span>
   </button>
+</div>
+<div class="table-responsive">
+  <table class="table">
+    <thead>
+    <tr>
+      <th>#</th>
+      <th>Course ID</th>
+      <th>Course Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let course of courses; let i = index">
+      <td>{{i+1}}</td>
+      <td>{{course.courseId}}</td>
+      <td>{{course.courseName}}</td>
+    </tr>
+    </tbody>
+  </table>
 </div>
